css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap");

:root {
  --mainColor: #f75049;
  --secondaryColor: #5ef6ff;
  --yellow: #fcee09;
  --darkestBlue: rgb(14, 14, 23);
  --white: #ffffff;
  --pureblack: rgb(0, 0, 0);
  --grey: rgb(214, 208, 208);
  --orange: #fb932e;
  --pointer: url("../cursor/link.png"), pointer;
  --beam: url("../cursor/beam.png"), pointer;
}
*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Rajdhani", serif;
  color: var(--white);
  background-color: var(--darkestBlue);
  cursor: url("../cursor/arrow.png"), auto;
  overflow-x: hidden;
}

.fake-big {
  display: block;
  font-size: 10rem;
  font-weight: bolder;
  position: absolute;
  /* top: -100px; */
  left: 170px;
  color: var(--yellow);
  text-shadow: 2px 2px 2px 4px 0 var(--darkestBlue);
  user-select: none;
  z-index: -999;
}

header {
  width: 95%;
  height: 10vh;
  margin: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  z-index: 2;
}
a {
  cursor: var(--pointer);
}

#sound {
  padding: 7px;
  background-color: #1b1b1b;
  border-radius: 5px;
  display: flex;
  align-items: center;
  color: var(--white);
}

.fa-music {
  font-size: 1.2rem;
  margin: 7px;
  color: var(--secondaryColor);
}

.on-off {
  cursor: var(--pointer);
  margin-left: 5px;
}

#off {
  color: var(--secondaryColor);
}

#on {
  display: none;
  color: var(--yellow);
}

.btns-container .fa-solid {
  font-size: 2rem;
  padding: 10px;
  background-color: #181818;
  color: var(--white);
  cursor: var(--pointer);
}

.btns-container .fa-solid:nth-child(2) {
  display: none;
}

/* aside section starts here*/
.aside {
  width: 100%;
  height: 0;
  position: fixed;
  top: 0;
  left: 0;
  overflow: hidden;
  background-color: var(--darkestBlue);
  z-index: 1;
}

.show-nav {
  height: 100%;
  overflow: visible;
}

.aside-wrapper {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;
}

.logo-section {
  min-height: 32vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: var(--pureblack);
}

.logo {
  display: grid;
  place-items: center;
  text-decoration: none;
}

.logo img {
  width: 45px;
  height: auto;
  border-radius: 50%;
}
.logo span {
  font-size: 1.7rem;
  color: var(--white);
}
.logo-section > span {
  margin-top: 25px;
  font-size: 20px;
  font-family: "Rajdhani", serif;
}

/* nav section starts here */
.nav-links a {
  display: block;
  text-align: center;
  line-height: 3rem;
  text-decoration: none;
  color: var(--secondaryColor);
}
.nav-links a:hover {
  color: var(--mainColor);
}

.nav-links a::before {
  content: "";
  width: 100%;
  height: 1px;
  position: absolute;
  left: 0;
  background-color: var(--secondaryColor);
}

/* social icons */

.social-icons {
  list-style-type: none;
  display: flex;
  margin-bottom: 30px;
}

.social-icons li {
  width: 30px;
  font-size: 1rem;
}

.social-icons li a {
  text-decoration: none;
  color: var(--secondaryColor);
}

.social-icons li a:hover {
  color: var(--mainColor);
}

/* nav bar ends here */

#section-home {
  min-height: 100vh;
  display: flex;
  align-items: center;
  padding-left: 1.5rem;
}

.text-zone h1 {
  font-size: 3.2rem;
  line-height: 50px;
  letter-spacing: -3px;
  color: var(--yellow);
  position: relative;
  padding: 10px 0px 0px 0px;
}

.text-zone h1::before {
  content: "<h1>";
  position: absolute;
  top: -80px;
  left: -10px;
  font-size: 1.2rem;
  font-family: "Orbitron", serif;
  color: var(--grey);
  letter-spacing: 3px;
}

.text-zone h1::after {
  content: "</h1>";
  position: absolute;
  bottom: -25px;
  right: -70px;
  font-size: 1.2rem;
  font-family: "Orbitron", serif;
  color: var(--grey);
  letter-spacing: 3px;
}

.text-zone img {
  width: 30px;
  height: 50px;
}

.text-zone .nickname {
  color: var(--secondaryColor);
  letter-spacing: 3px;
  font-size: 14px;
  position: relative;
}

.text-zone .pink-text {
  margin-top: 30px;
  color: var(--secondaryColor);
  letter-spacing: 3px;
  font-size: 14px;
  position: relative;
}

.pink-text::before {
  content: "<p>";
  position: absolute;
  top: -30px;
  left: -10px;
  font-size: 1.2rem;
  font-family: "Orbitron", serif;
  color: var(--grey);
  letter-spacing: 3px;
}

.pink-text::after {
  content: "</p>";
  position: absolute;
  top: 10px;
  right: -70px;
  font-size: 1.2rem;
  font-family: "Orbitron", serif;
  color: var(--grey);
  letter-spacing: 3px;
}

.myWork {
  text-decoration: none;
  color: var(--yellow);
}

/* contact me button */
.contact-button {
  margin-top: 50px 0 0;
  text-decoration: none;
  width: 100%;
  max-width: 200px;
  height: 50px;
  height: 40px;
  display: block;
  line-height: 40px;
  letter-spacing: 3px;
  position: relative;
  text-align: center;
  background-color: var(--mainColor);
  color: var(--secondaryColor);
}

.contact-button div {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  transition: all 0.3s ease-in-out;
}

.contact-button span.bg {
  position: absolute;
  width: 0%;
  height: 100%;
  left: -5px;
  top: 0;
  transition: all 0.3s ease-in-out;
  color: var(--mainColor);
  transform: skewX(-19deg);
}
.contact-button:hover span.bg {
  width: 110%;
  background-color: var(--yellow);
  color: var(--pureblack);
}
.contact-button span.base {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  border: 1px solid var(--secondaryColor);
  box-sizing: border-box;
}

.contact-button span.text {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}
.contact-button:hover span.text {
  color: var(--pureblack);
}
/* ... */

